test/syntax/34-memop-err.c
// ======================================================================

/* memop -> PERIOD
          | ARROW */

// ======================================================================

struct human {
  int age;
};

void main(void)
{
  struct human h;

  h,age = 25;	// error: not period
}

// ======================================================================
